# msis-job-agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  StudentProfiles.js  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  studentProfileSchema.json
.github/workflows/: ci.yml
data/: gold_job_postings_labeled.json  sample_jobs.json  sample_ksbit_jobs.csv  sample_ksbit_jobs.json  sample_profiles.json
docs/: architecture.md  compliance_notes.md  data_flow.md  gcs_trend_outputs.md  handoff_outline.md  ksbit_export_adapter.md  mvp_pipeline.md  source_approval_checklist.md  source_registry.md
docs/examples/: approved_jobs.sample.json
scripts/: evaluate_gold_set.py
sql/: gcs_trend_queries.sql
src/hope_job_agent/: __init__.py  cli.py  config.py  main.py
src/hope_job_agent/agents/: __init__.py  gcs_agent.py  student_agent.py
src/hope_job_agent/classification/: __init__.py  classifier.py  taxonomy.py
src/hope_job_agent/datasets/: __init__.py  gold_postings.py
src/hope_job_agent/delivery/: __init__.py  email_digest.py
src/hope_job_agent/evaluation/: __init__.py  (+2 more)
tests/: test_approved_json_source.py  test_classifier.py  test_cli.py  test_config.py  test_deduplicate.py  test_employer_careers_source.py  test_evaluation.py  test_gcs_agent.py  test_gold_dataset.py  test_gold_evaluation.py  test_ksbit_export_adapter.py  test_models.py  test_mvp_runner.py  test_pipeline_runner.py  test_ranker.py  test_source_registry.py  test_sqlite_store.py
tests/fixtures/: labelled_postings.json
(+28 files in other folders)
